# project-kaizen

./: .gitignore  CLAUDE.md  README.md  TASK.md  TODO.md  behavior-examples.md  debug_test.py  docker-compose.yml  knowledge-protocol-v2-examples.md  knowledge-protocol-v2.md  knowledge-protocol.md  mcp-knowledge-protocol.md  multi-project-products.md  neo4j-design-challenge.md  project-kaizen-product-specification.md
.claude/agents/: postgres-architect.md
database/: 01-initial-schema.sql  Makefile  docker-compose.yml  pyproject.toml  sample-data.sql  schema.sql  test-tasks.md  yoyo.ini
database/sample/: sample-data.sql
database/scripts/: load_samples.py  migrate.py  reset.py  status.py
database/sql/migrations/: 001_initial_schema.sql
database/sql/sample-data/: 001_sample_data.sql  002_kaizen_mcp.sql
database/sql/tests/: 001_test_helpers.sql
database/test/: sample-data.sql  test-tasks.md
database/tests/: 01-test-helpers.sql
docs/: behavior-examples.md  knowledge-discovery-system.md  mcp-protocol+actions.md  mcp-server-architecture.md  product-specification.md  search-optimization-guide.md
guidelines/: README.md
guidelines/advanced-patterns/: method-decoration.md  testing.md
guidelines/components/: context.md  logging.md  tools.md
guidelines/foundation/: core-concepts.md  installation.md  quickstart.md
guidelines/server-development/: architecture.md  deployment.md
mcp-server/: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  TESTING_RESULTS.md  TODO-TESTS.md  TODO-v2.md  TODO.md  pyproject.toml
mcp-server/docs/: architecture.md  database.md  fastmcp-examples.md  pitfalls.md  tooling.md  type-safety.md
mcp-server/src/project_kaizen/: __init__.py  __main__.py  config.py  container.py  database.py  exceptions.py  main.py  server.py  settings.py  types.py
mcp-server/src/project_kaizen/core/: __init__.py  database_ops.py  knowledge_ops.py  namespace_ops.py  scope_ops.py
mcp-server/src/project_kaizen/infrastructure/: database.py
mcp-server/src/project_kaizen/models/: __init__.py  knowledge.py  namespace.py  scope.py
mcp-server/src/project_kaizen/repositories/: base.py  knowledge.py  namespace.py  scope.py
mcp-server/src/project_kaizen/services/: knowledge.py  namespace.py  scope.py
mcp-server/src/project_kaizen/tools/: knowledge.py  namespace.py  scope.py
mcp-server/src/project_kaizen/utils/: logging.py  mcp.py
mcp-server/tests/: conftest.py  test_framework_verification.py  test_mcp_namespace_tools.py  test_mcp_scope_tools.py
server/: .env.example  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
server/src/kaizen_mcp/: __init__.py  __main__.py  config.py  database.py  server.py  utils.py  validators.py
server/src/project_kaizen/: __init__.py  __main__.py  config.py  database.py  models.py  server.py  utils.py  validators.py
server/src/project_kaizen_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/tests/: __init__.py  conftest.py  test_config_tools.py  test_knowledge_discovery_tools.py  test_knowledge_management_tools.py  test_namespace_tools.py  test_scope_tools.py  test_search_knowledge_tools.py
specs-v1/: kaizen-requirements-investigation.md  kaizen-solution-specifications-v3.md  kaizen-solution-specifications.md  save-knowledge-endpoint-discussion.md
specs-v3/: kaizen-mcp-actions-v3.md  kaizen-solution-specifications-v3.md
