[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-kaizen"
version = "0.1.0"
description = "MCP server that elevates transient AI interactions into persistent organizational knowledge"
authors = [{name = "Lyubomir Galabov", email = "lvgalabov@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
    "asyncpg>=0.30.0",
    "structlog>=25.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
kaizen-mcp = "project_kaizen.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0", 
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/project_kaizen --cov-report=term-missing"

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.2",
]
