[project]
name = "project-kaizen"
version = "0.1.0"
description = "MCP server that elevates transient AI interactions into persistent organizational knowledge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.1.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "testcontainers[postgres]>=4.12.0",
]

[project.scripts]
project-kaizen-mcp = "project_kaizen:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "strict"
strict = ["src"]
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportUnusedFunction = "error"
reportUnnecessaryTypeIgnoreComment = "error"
